--- a/form.html
+++ b/form.html
@@ -14,6 +14,12 @@
 
 <body>
     <!-- paginaDois.html -->
+    <header>
+        <div id="logoJvc" >
+            <img id="imagemLogo"src="logoJvc.png"/>
+        </div>
+    </header>
+
     <div id="form">
         <form action="index.html" method="post" id="formulario">
             <div>
@@ -36,6 +42,13 @@
         ">Limpar dados</button>
     </div>
     <script src="application.js"></script>
+
+    <footer>
+        <div id="logoIntelly" >
+            <img id="imagemLogoIntelly"src="logoIntelly2.png"/>
+        </div>
+    </footer>
+
 </body>
 
 </html>
